# auth-server

./: .env  Cargo.toml  Dockerfile  arsitecture.excalidraw  compose.yaml
migrations/: 20240921134939_create_user_table.sql  20240921150959_create_auth_tokens_table.sql
src/: lib.rs  main.rs
src/application/: errors.rs  mod.rs
src/application/dtos/: mod.rs  user_dtos.rs
src/application/use_cases/: mod.rs  register_user.rs
src/config/: mod.rs
src/domain/entities/: mod.rs  user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: mod.rs
src/infrastructures/: mod.rs
src/infrastructures/database/: postgres.rs
src/infrastructures/repositories/: mod.rs  postgres_user_repository.rs
src/infrastructures/services/: mod.rs
src/interfaces/api/handlers/: auth_handlers.rs  mod.rs
src/interfaces/kafka/consumers/: mod.rs
